[package]
name = "osint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for OSINT platform"

[[bin]]
name = "osint"
path = "src/main.rs"

[dependencies]
# Local crates
osint-core = { path = "../osint-core" }

# CLI framework
clap = { workspace = true }
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
eyre = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true }